examples/test/testpolicy9978.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9978
  namespace: namespace467
spec:
  podSelector:
    matchLabels:
      key0: value47
      key38: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value27
      podSelector:
        matchLabels:
          key25: value26
          key33: value34
          key47: value29
